# xDiff_Paper

./: README.md  environment.yml  flexric.conf
diffusion/: env.py  main.py  read_bin.py  rewards.csv
diffusion/agents/: ql_cm.py
diffusion/results/online/intercell_interference/QL|0|alpha-0.05|eta-1.0|sampler_onestep|test_qnorm/: events.out.tfevents.1732316221.inss-optiplex-001.3444555.0  events.out.tfevents.1732316995.inss-optiplex-001.3483642.0  events.out.tfevents.1732317172.inss-optiplex-001.3492535.0  events.out.tfevents.1732317428.inss-optiplex-001.3505634.0  events.out.tfevents.1732317472.inss-optiplex-001.3507883.0  events.out.tfevents.1732317604.inss-optiplex-001.3514629.0  events.out.tfevents.1732317861.inss-optiplex-001.3527744.0  events.out.tfevents.1732318062.inss-optiplex-001.3537987.0  events.out.tfevents.1732318153.inss-optiplex-001.3542586.0  events.out.tfevents.1732318162.inss-optiplex-001.3543194.0  events.out.tfevents.1732318196.inss-optiplex-001.3544806.0  events.out.tfevents.1732318255.inss-optiplex-001.3547939.0  (+235 more)
dudata/: .~lock.ctrl.csv#  KPM_UE.txt  KPM_UE_all_info.txt  KPM_UE_csrs.txt  KPM_UE_iais.txt  KPM_UE_split.txt  ctrl.csv  interference_map.txt
examples/xApp/c/ctrl/: CMakeLists.txt  xapp_combin_ctrl.c  xapp_peihao.c  xapp_rb_ctrl.c  xapp_rc_slice_ctrl.c
examples/xApp/c/monitor/: xapp_gtp_mac_rlc_pdcp_moni.c  xapp_kpm_moni.c
src/sm/rc_sm/dec/: rc_dec_asn.c
src/sm/rc_sm/enc/: rc_enc_asn.c
src/xApp/: e2_node_connected_xapp.h  e42_xapp.c
src/xApp/db/sqlite3/: sqlite3_wrapper.c
test/rnd/: fill_rnd_data_rc.c
(+3 files in other folders)
